--- a/doc/report/mystyle.sty
+++ b/doc/report/mystyle.sty
@@ -3,14 +3,20 @@
 %%%%%%%%%%%%%%%%%%%%
 % Required Packages
 %%%%%%%%%%%%%%%%%%%%
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{polyglossia}
 %\usepackage[english]{babel}
 \usepackage{blindtext}
+\usepackage{varioref}
+\usepackage{cleveref}
 \usepackage{datetime2}
-\usepackage{tikz}
+\usepackage[T1]{fontenc}
+%\usepackage{fancyref}
+\usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\usepackage{multirow}
+\usepackage[section]{placeins}
 \usepackage{pgf}
+\usepackage{polyglossia}
+\usepackage{tikz}
 
 %%%%%%%%%%%%%%%%
 % Title Options
