--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -19,6 +19,9 @@
 
     \input{./tex/evaluation}
 
+    \appendix
+    \input{./tex/eda_tables}
+    \input{./tex/eda_figures}
 
     \clearpage
     \input{./tex/bibliography}
