--- a/doc/report/tex/eda.tex
+++ b/doc/report/tex/eda.tex
@@ -1,61 +1,64 @@
 \section{Exploratory Data Analysis}
 \label{sec:eda}
 
-The dataset has 8164 samples with the following properties:
-\begin{itemize}
-\item Id
-\item Birth date
-\item Job type
-\item School level
-\item Domestic status
-\item Profession
-\item Domestic relationship type
-\item Ethnicity
-\item Gender
-\item Earned dividends
-\item Interest earned
-\item Monthly work
-\item Country of origin
-\item Target
-\end{itemize}
-Each of the properties was analysed for insights and anomalies which are
-described in the following sections.
+The dataset has 8164 samples, each property was analysed for insights and
+anomalies.
+The following descriptions were inferred using the name of the property in the
+dataset file and the type and values of the data.
 
-\subsubsection*{Id}
-Id for each subject, all values distinct not problems detected in the
-dataset.
+\begin{description}
+\item [id] Integer, identifier for each subject, all values distinct no
+    problems detected.
 
-\subsubsection*{Birth date}
-Date of birth of the subject, the youngest is from
-\DTMdisplaydate{2016}{2}{10}{-1} and the oldest
-\DTMdisplaydate{1928}{01}{09}{-1}.
-Observing Figure \ref{fig:birth_date_freq} nothing surprinsing is detected.
+\item [target] Integer, did the subject become unemployed in the following
+    12 months.
 
-\begin{figure}[ht]
-    \caption{Date of birth frequency.}
-    \label{fig:birth_date_freq}
-    \centering
-    \input{./img/birth_date_freq.pgf}
-\end{figure}
+\item [birth date] Date (YYYY-MM-DD), date of birth of the subject.
+    The youngest being \DTMdisplaydate{2016}{2}{10}{-1} and the oldest
+    \DTMdisplaydate{1928}{01}{09}{-1}.
+    Frequency plot (see \vref{fig:birth_date_freq}) shows nothing surprising.
 
-\subsubsection*{Job type}
-The current job type of the subject, government, self employed, etc\ldots
-Value counts are available in Table \ref{tab:job_type_value_count}.
+\item [country of origin] Categorical, country names come in a variety of
+    inconsistent formats.
 
-\begin{table}
-    \caption{Job type value counts.}
-    \label{tab:job_type_value_count}
-    \centering
-    \begin{tabular}{cc}
-        private & 5919 \\
-        unknown & 620 \\
-        local-gov & 618 \\
-        state-gov & 368 \\
-        self-emp-not-inc & 303 \\
-        federal-gov & 236 \\
-        self-emp-inc & 94 \\
-        without-pay & 4 \\
-        never-worked & 2 \\
-    \end{tabular}
-\end{table}
+\item [domestic relationship type] Categorical,
+    (see \vref{tab:domestic_relationship_type_value_counts}) who the subject
+    lives with.
+    Categories are unclear and ill defined.
+    Moreover it is inconsistent with the \emph{domestic status}, there are a
+    considerable number of entries classified as
+    \emph{domestic relation type}--\emph{never married} and
+    \emph{domestic status}--\emph{d} (presumably divorced)
+    (see \vref{tab:domestic_type_by_status_counts}).
+
+\item [domestic status] Categorical, marital status or if has married several
+    times (see \vref{tab:domestic_status_value_counts}).
+    By elimination category \emph{d} is supposedly divorced.
+
+\item [earned dividends] Numerical, monetary amount (currency not specified).
+    Return from distribution of corporate earnings, it's 0 for all samples.
+
+\item [ethnicity] Categorical, categories have funny names
+    (see \vref{tab:ethnicity_value_counts}).
+
+\item [gender] Categorical, all female dataset
+    (see \vref{tab:gender_value_counts}).
+
+\item [job type] Categorical, current job type of the subject
+    (see \vref{tab:job_type_value_counts}), government, self employed,
+    item etc\ldots
+
+\item [interest earned] Numerical, monetary amount (currency not specified).
+    Returns from loaning money (see \vref{fig:interest_earned_freq}).
+
+\item [monthly work] Numerical, number of hours of work per month
+    (see \vref{fig:monthly_work_freq})
+
+\item [profession] Categorical, type of profession
+    (see \vref{tab:profession_value_counts}).
+
+\item [school level] Categorical, subject level of schooling
+    (see \vref{tab:school_level_value_counts}).
+
+\end{description}
 
