--- a/doc/report/mystyle.sty
+++ b/doc/report/mystyle.sty
@@ -10,12 +10,14 @@
 \usepackage{datetime2}
 \usepackage[T1]{fontenc}
 %\usepackage{fancyref}
-\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage[utf8]{inputenc}
+\usepackage{listings}
 \usepackage{multirow}
 \usepackage[section]{placeins}
 \usepackage{pgf}
 \usepackage{polyglossia}
+\usepackage{verbatim}
 \usepackage{tikz}
 
 %%%%%%%%%%%%%%%%
