--- a/doc/report/tex/modelling.tex
+++ b/doc/report/tex/modelling.tex
@@ -1,4 +1,32 @@
 \section{Modelling}
 \label{sec:modelling}
 
-\Blindtext
+To get a feelling of the baseline performance of the models available in
+the \emph{scikit} package severall where tried with the default parameters.
+The train/test split is described in \vref{subsec:splitting}.
+The results are in \vref{tab:initial_model_scores}, a the
+exact parameters passet to the models is present in
+\vref{tab:initial_model_params}
+
+\begin{table}[!h]
+    \caption{}
+    \label{tab:initial_model_scores}
+    \centering
+    \begin{tabular}{cc}
+        Model & AUC ROC Score \\
+        \hline
+        QuadraticDiscriminantAnalysis & 0.8053 \\
+        SVC & 0.6698 \\
+        SGDClassifier & 0.6377 \\
+        KNeighborsClassifier & 0.7267 \\
+        GaussianProcessClassifier & 0.7022 \\
+        GaussianNB & 0.6718 \\
+        DecisionTreeClassifier & 0.6729 \\
+        BaggingClassifier & 0.8428 \\
+        RandomForestClassifier & 0.8160 \\
+        ExtraTreesClassifier & 0.8154 \\
+        AdaBoostClassifier & 0.9008 \\
+        GradientBoostingClassifier & 0.9212 \\
+        VotingClassifier & 0.8233 \\
+    \end{tabular}
+\end{table}
