--- a/doc/report/tex/eda.tex
+++ b/doc/report/tex/eda.tex
@@ -1,10 +1,16 @@
 \section{Exploratory Data Analysis}
 \label{sec:eda}
 
-The dataset has 8164 samples, each property was analysed for insights and
-anomalies.
-The following descriptions were inferred using the name of the property in the
-dataset file and the type and values of the data.
+The provided dataset contains personal information of several people
+(8164 samples), such as date of birth and current employment and maps
+it to the observation if the person became unemployed in the next 12 months.
+
+The dataset was made available without any information about it's contents
+except for the property names.
+Each one was analysed for insights and anomalies.
+
+The following list details what could be obtained exploring the data
+(column name, value types and values).
 
 \begin{description}
 \item [id] Integer, identifier for each subject, all values distinct no
