--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -1,15 +1,17 @@
-\documentclass[a4paper,titlepage]{article}
+\documentclass[a4paper]{article}
+%\documentclass[a4paper,titlepage]{article}
 \usepackage{mystyle}
 
 \begin{document}
     \maketitle
-    \tableofcontents
-    \listoffigures
-    \listoftables
 
     \begin{abstract}
         \blindtext
     \end{abstract}
+
+%    \tableofcontents
+%    \listoffigures
+%    \listoftables
 
     \input{./tex/eda}
 
