--- a/doc/report/tex/data.tex
+++ b/doc/report/tex/data.tex
@@ -12,32 +12,30 @@ Finally section \vref{subsec:splitting} breaks down the train/test split.
 \subsection{Data cleaning}
 \label{subsec:cleaning}
 
-% birth date
-To input in the models birth dates where converted to timestamps.
+On data import the \emph{birth dates} where converted to naive dates as no
+timezone information was provided.
+It's doubtful the timezone would provide any useful information.
 
-
-% country of origin
-On importing the dataset all countries where converted
+The \emph{countries of origin} where converted
 to the corresponding \emph{ISO 3166--1 alpha-2} representation.
 Some inputs required special rules.
 Especially ambiguous was \emph{dr} which
 represents no country code this was converted to Dominican Republic (DO)
 even if the race for these inputs suggests it's not (mostly white).
 
-% categorical data
-For categorical data, the classes where kept as is and turned into dummy class
-variables.
-
+All categorical data columns was kept as is, there was not enough information
+to reach any conclusion.
+% TODO after tuning maybe we can remove columns
 
 
 \subsection{Feature engineering}
 \label{subsec:feature}
 
-% Earned dividends
+\emph{birth dates} where converted to timestamps.
 In the dataset earned dividends and gender do not change,
 these properties where dropped since they convey no useful information.
 If new samples include this value this decision will be reconsidered.
-
+All categorical data was turned into dummy class variables.
 
 \subsection{Train/test splitting}
 \label{subsec:splitting}
