--- a/doc/report/tex/data.tex
+++ b/doc/report/tex/data.tex
@@ -41,7 +41,6 @@ All categorical data was turned into dummy class variables.
 \label{subsec:splitting}
 
 The train/test split was done holding out .4 of the data for final
-validation (train{\_}test{\_}split).
-Furthermore training was done using a shuffle split (\emph{ShuffleSplitCV})
-with .3 for testing.
+validation.
+Furthermore training was done using a shuffle split with .3 for testing.
 
