--- a/doc/report/mystyle.sty
+++ b/doc/report/mystyle.sty
@@ -17,8 +17,9 @@
 \usepackage[section]{placeins}
 \usepackage{pgf}
 \usepackage{polyglossia}
-\usepackage{verbatim}
+\usepackage{subcaption}
 \usepackage{tikz}
+\usepackage{verbatim}
 
 %%%%%%%%%%%%%%%%
 % Title Options
