--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -6,7 +6,17 @@
     \maketitle
 
     \begin{abstract}
-        \blindtext
+        The objective is to to predict the employment outcome of an
+        individual in the next 12 months.
+        To this effect number of machine learning models and techniques
+        were applied.
+
+        % TODO what else should I say?
+        % From the data we gathered a number of insights...
+
+        The model with the best predictive capabilities for this problem
+        was a gradient boost classifier with an AUC ROC score of \(0.9369\)
+        with the validation set.
     \end{abstract}
 
 %    \tableofcontents
