--- a/doc/report/tex/eda_figures.tex
+++ b/doc/report/tex/eda_figures.tex
@@ -5,6 +5,7 @@
     \label{fig:birth_date_freq}
     \centering
     \input{./img/birth_date_freq.pgf}
+%    \includegraphics[width=10]{./img/birth_date_freq.pgf}
 \end{figure}
 
 
@@ -21,4 +22,53 @@
     \label{fig:monthly_work_freq}
     \centering
     \input{./img/monthly_work_freq.pgf}
+\end{figure}
+
+\begin{figure}[!h]
+    \caption{Sections of the cross-correlation matrix.}
+    \label{fig:cross-matrix}
+
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-0-0.pgf}}
+    \end{subfigure}
+
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-0-1.pgf}}
+    \end{subfigure}
+\end{figure}
+
+
+\begin{figure}[!h]
+    \ContinuedFloat
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-0-1.pgf}}
+    \end{subfigure}
+
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-1-1.pgf}}
+    \end{subfigure}
+\end{figure}
+
+
+\begin{figure}[!h]
+    \ContinuedFloat
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-1-2.pgf}}
+    \end{subfigure}
+
+    \begin{subfigure}[b]{\linewidth}
+        \centering
+        %        \caption{A subfigure}\label{fig:1a}
+        \scalebox{0.3}{\input{./img/cross-matrix-2-2.pgf}}
+    \end{subfigure}
 \end{figure}
