--- a/doc/report/tex/evaluation.tex
+++ b/doc/report/tex/evaluation.tex
@@ -1,4 +1,12 @@
 \section{Evaluation}
 \label{sec:evaluation}
 
-\blindtext
+% TODO decision tree visualization
+
+Applying the selected model (a gradient boost classifier) to the validation
+data we obtain a final score of:
+
+    \[0.9369\]
+
+We can therefore with a high degree of certainty predict the employment
+outcome in the next 12 months.
