--- a/doc/report/tex/data.tex
+++ b/doc/report/tex/data.tex
@@ -22,6 +22,8 @@ Some inputs required special rules.
 Especially ambiguous was \emph{dr} which
 represents no country code this was converted to Dominican Republic (DO)
 even if the race for these inputs suggests it's not (mostly white).
+Also in the list is \emph{schotland} which is not part of the \emph{ISO}
+country list.
 
 All categorical data columns was kept as is, there was not enough information
 to reach any conclusion.
