--- a/doc/report/tex/eda_figures.tex
+++ b/doc/report/tex/eda_figures.tex
@@ -1,74 +1,87 @@
 \section{EDA Figures}
 
 \begin{figure}[!h]
+\begin{minipage}{.45\textwidth}
     \caption{Date of birth frequency.}
     \label{fig:birth_date_freq}
     \centering
-    \input{./img/birth_date_freq.pgf}
+    \scalebox{0.5}{\input{./img/birth_date_freq.pgf}}
 %    \includegraphics[width=10]{./img/birth_date_freq.pgf}
-\end{figure}
-
-
-\begin{figure}[!h]
+\end{minipage}
+%\end{figure}
+%\begin{figure}[!h]
+\begin{minipage}{.45\textwidth}
     \caption{Interest earned frequency (logarithmic scale).}
     \label{fig:interest_earned_freq}
     \centering
 %    \input{./img/interest_earned_freq.pgf}
-    \includegraphics{./img/interest_earned_freq.png}
-\end{figure}
-
-\begin{figure}[!h]
+    \includegraphics[width=1.2\textwidth]{./img/interest_earned_freq.png}
+%    \includegraphics{./img/interest_earned_freq.png}
+\end{minipage}
+%\end{figure}
+%\begin{figure}[!h]
+\begin{minipage}{.45\textwidth}
     \caption{Monthly work frequency.}
     \label{fig:monthly_work_freq}
     \centering
-    \input{./img/monthly_work_freq.pgf}
+    \scalebox{0.5}{\input{./img/monthly_work_freq.pgf}}
+\end{minipage}
 \end{figure}
 
 \begin{figure}[!h]
     \caption{Sections of the cross-correlation matrix.}
     \label{fig:cross-matrix}
 
-    \begin{subfigure}[b]{\linewidth}
+%    \begin{subfigure}[b]{\linewidth}
+\begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-0-0.pgf}}
-    \end{subfigure}
-
-    \begin{subfigure}[b]{\linewidth}
+        \scalebox{0.22}{\input{./img/cross-matrix-0-0.pgf}}
+\end{minipage}
+%    \end{subfigure}
+%    \begin{subfigure}[b]{\linewidth}
+\begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-0-1.pgf}}
-    \end{subfigure}
+        \scalebox{0.22}{\input{./img/cross-matrix-0-1.pgf}}
+\end{minipage}
+%    \end{subfigure}
 \end{figure}
 
 
 \begin{figure}[!h]
     \ContinuedFloat
-    \begin{subfigure}[b]{\linewidth}
+%    \begin{subfigure}[b]{\linewidth}
+    \begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-0-1.pgf}}
-    \end{subfigure}
-
-    \begin{subfigure}[b]{\linewidth}
+        \scalebox{0.22}{\input{./img/cross-matrix-0-1.pgf}}
+    \end{minipage}
+%    \end{subfigure}
+%    \begin{subfigure}[b]{\linewidth}
+    \begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-1-1.pgf}}
-    \end{subfigure}
+        \scalebox{0.22}{\input{./img/cross-matrix-1-1.pgf}}
+    \end{minipage}
+%    \end{subfigure}
 \end{figure}
 
 
 \begin{figure}[!h]
     \ContinuedFloat
-    \begin{subfigure}[b]{\linewidth}
+%    \begin{subfigure}[b]{\linewidth}
+    \begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-1-2.pgf}}
-    \end{subfigure}
-
-    \begin{subfigure}[b]{\linewidth}
+        \scalebox{0.22}{\input{./img/cross-matrix-1-2.pgf}}
+    \end{minipage}
+%    \end{subfigure}
+%    \begin{subfigure}[b]{\linewidth}
+    \begin{minipage}{.5\textwidth}
         \centering
         %        \caption{A subfigure}\label{fig:1a}
-        \scalebox{0.3}{\input{./img/cross-matrix-2-2.pgf}}
-    \end{subfigure}
+        \scalebox{0.22}{\input{./img/cross-matrix-2-2.pgf}}
+    \end{minipage}
+%    \end{subfigure}
 \end{figure}
