--- a/doc/report/tex/modelling.tex
+++ b/doc/report/tex/modelling.tex
@@ -108,7 +108,7 @@ following:
     \caption{Score change.}
     \label{fig:score-features}
     \centering
-    \input{././img/score-features.pgf}
+    \scalebox{0.5}{\input{././img/score-features.pgf}}
 \end{figure}
 
 
